--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit
-torch
-opencv-python
+gradio
+open-clip-torch
+faiss-cpu
+opencv-python-headless
 Pillow
 numpy
-faiss-cpu
-open-clip-torch
